--- a/Code/Web/TellMe.Web/appsettings.Development.json
+++ b/Code/Web/TellMe.Web/appsettings.Development.json
@@ -23,8 +23,8 @@
     "Aud": "TellMe.Web"
   },
   "Push": {
-    "Certificate": "tms_push_cert_dev.p12",
-    "Password": "TellMeAStory1`",
+    "Certificate": "push_cert_dev.p12",
+    "Password": "tall767/pill",
     "IsProductionMode": false
   },
   "AzureBlob": {
@@ -39,7 +39,7 @@
     "MailTemplateId": "9c85b27e-58cd-42a3-a74f-3c58fe465cc9"
   },
   "Settings":{
-    "SupportEmail": "alex.v.minski@gmail.com",
+    "SupportEmail": "beth.zampieri@kismetdesignandconsult.com",
     "Host": "tellmeastory.com"
   }
 }
