--- a/Code/Web/TellMe.Web/appsettings.Production.json
+++ b/Code/Web/TellMe.Web/appsettings.Production.json
@@ -16,8 +16,8 @@
     "Aud": "TellMe.Web"
   },
   "Push": {
-    "Certificate": "tms_push_cert_prod.p12",
-    "Password": "TMSProd1`",
+    "Certificate": "push_cert_prod.p12",
+    "Password": "lima786!roof",
     "IsProductionMode": true
   },
   "AzureBlob": {
@@ -32,7 +32,7 @@
     "MailTemplateId": "9c85b27e-58cd-42a3-a74f-3c58fe465cc9"
   },
   "Settings":{
-    "SupportEmail": "alex.v.minski@gmail.com",
+    "SupportEmail": "beth.zampieri@kismetdesignandconsult.com",
     "Host": "tellmeastory.com"
   }
 }
