--- a/Code/Mobile/TellMe.Mobile.Core/TellMe.Mobile.Core.csproj
+++ b/Code/Mobile/TellMe.Mobile.Core/TellMe.Mobile.Core.csproj
@@ -24,6 +24,8 @@
     <PackageReference Include="sqlite-net-standard" Version="1.5.1" />
     <PackageReference Include="SQLiteNetExtensionsCore.Async" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.9.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.9.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\TellMe.Shared.Contracts\TellMe.Shared.Contracts.csproj" />
