--- a/Code/Web/TellMe.Web/appsettings.Development.json
+++ b/Code/Web/TellMe.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:mehspot.database.windows.net,1433;Initial Catalog=tellme_dev;Persist Security Info=False;User ID=jackling;Password=Mehspot01!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:mehspot.database.windows.net,1433;Initial Catalog=tellme_test;Persist Security Info=False;User ID=jackling;Password=Mehspot01!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -19,7 +19,7 @@
   },
   "Audience": {
     "Secret": "Y2F0Y2hlciUyMHdvbmclMjBsb3ZlJTIwLm5ldA==",
-    "Iss": "http://192.168.1.73",
+    "Iss": "http://192.168.1.10",
     "Aud": "TellMe.Web"
   },
   "Push": {
