--- a/Code/Mobile/TellMe.Mobile.iOS/packages.config
+++ b/Code/Mobile/TellMe.Mobile.iOS/packages.config
@@ -1,28 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentValidation" version="7.2.1" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter" version="1.9.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Analytics" version="1.9.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.AppCenter.Crashes" version="1.9.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="xamarinios10" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="xamarinios10" />
+  <package id="FluentValidation" version="8.0.100" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter" version="1.10.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Analytics" version="1.10.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AppCenter.Crashes" version="1.10.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="xamarinios10" />
-  <package id="SimpleInjector" version="4.0.12" targetFramework="xamarinios10" />
+  <package id="SimpleInjector" version="4.4.0" targetFramework="xamarinios10" />
   <package id="SQLiteNetExtensionsCore" version="2.0.0" targetFramework="xamarinios10" />
   <package id="SQLiteNetExtensionsCore.Async" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="sqlite-net-pcl" version="1.4.118" targetFramework="xamarinios10" />
+  <package id="sqlite-net-pcl" version="1.5.231" targetFramework="xamarinios10" />
   <package id="sqlite-net-standard" version="1.5.1" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.bundle_green" version="1.1.8" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.core" version="1.1.8" targetFramework="xamarinios10" />
-  <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.8" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="xamarinios10" />
+  <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.11" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Console" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
@@ -35,7 +37,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
@@ -61,8 +63,9 @@
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.SDWebImage" version="3.7.5" targetFramework="xamarinios10" />
+  <package id="Xamarin.SDWebImage" version="4.4.0" targetFramework="xamarinios10" />
 </packages>
