--- a/Code/TellMe.Shared.Contracts/TellMe.Shared.Contracts.csproj
+++ b/Code/TellMe.Shared.Contracts/TellMe.Shared.Contracts.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp2.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 </Project>
