--- a/Code/Web/TellMe.Web/appsettings.Development.json
+++ b/Code/Web/TellMe.Web/appsettings.Development.json
@@ -40,6 +40,7 @@
   },
   "Settings":{
     "SupportEmail": "beth.zampieri@kismetdesignandconsult.com",
+    "InfoEmail": "info@kismetdesignandconsult.com",
     "Host": "tellmeastory.com"
   }
 }
