--- a/Code/Web/TellMe.Web/appsettings.Production.json
+++ b/Code/Web/TellMe.Web/appsettings.Production.json
@@ -33,6 +33,7 @@
   },
   "Settings":{
     "SupportEmail": "beth.zampieri@kismetdesignandconsult.com",
+    "InfoEmail": "info@kismetdesignandconsult.com",
     "Host": "tellmeastory.com"
   }
 }
