--- a/Code/Mobile/TellMe.Mobile.iOS/TellMe.Mobile.iOS.csproj
+++ b/Code/Mobile/TellMe.Mobile.iOS/TellMe.Mobile.iOS.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
     <RootNamespace>TellMe.iOS</RootNamespace>
-    <AssemblyName>TellMe.iOS</AssemblyName>
+    <AssemblyName>StoryTella.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
